# antara-gaming-sfml-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
my_game_project/: CMakeLists.txt  game.scene.cpp  game.scene.hpp  intro.scene.cpp  intro.scene.hpp  main.cpp  my_game_project.cpp  my_game_project.hpp
my_game_project/assets/config/: game.config.json
my_game_project/data/linux/: org.antara.gaming.sfml.my_game_project.appdata.xml  org.antara.gaming.sfml.my_game_project.desktop
my_game_project/data/osx/: Packaging_CMakeDMGSetup.scpt  my_game_project.cmake
